--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,413 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
+.navHead{
+    width: 100%;
+    height: 6vh;
+
+    ul{
+        display: flex;
+        width: 40%;
+        height: 6vh;
+        margin: auto;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        gap: 50px;
+
+        li{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            a{
+                text-decoration: none;
+                font-size: 16px;
+                color: orange;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                h2{
+                    margin: auto;
+                }
+            }
+        }
+    }
+}
+
+.carousel {
+    height: 90vh;
+    width: 100%;
+
+    .carousel-inner{
+        width: 100%;
+        height: 90vh;
+
+        .content-carousel {
+            width: 100%;
+            height: 90vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .car-carousel{
+                width: 90%;
+                height: 90%;
+                display: flex;
+                flex-direction: column;
+
+                .carCarouHaut {
+                    flex: 4;
+                    position: relative;
+
+                    .texteCarCarouHaut{
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        text-transform: uppercase;
+                        font-family: 'Prompt', sans-serif;
+                        font-size: 275px;
+                        display: flex;
+                        align-items: right;
+                        justify-content: end;
+                        opacity: 0.3;
+                    }
+                    .contenuCarCarouHaut{
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        padding: 100px;
+
+                        .nomCarCarou {
+                            height: 20%;
+                            width: 80%;
+                            margin: auto;
+                            display: flex;
+                            justify-content: start;
+                            align-items: center;
+                            
+                            h2{
+                                
+                                font-size: 70px;
+                                color: white;
+                            }
+                        }
+                        .descriptionCarCarou{
+                            min-height: 30px;
+                            width: 80%;
+                            margin: auto;
+                            display: flex;
+                            justify-content: start;
+                            align-items: center;
+                            p{
+                                width: 40%;
+                                font-size: 20px;
+                            }
+                        }
+                        .imageCarCarou{
+                            width: 80%;
+                            height: 70%;
+                            margin: auto;
+                            display: flex;
+
+                            .btnsCarou{
+                                flex: 1;
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: start;
+                                a{
+                                    width: 200px;
+                                    height: 50px;
+                                    margin-bottom: 25px;
+                                    margin-top: 25px;
+                                }
+                                .miniLogoMarque{
+                                    width: 200px;
+                                    height: 200px;
+                                    background-position: center center;
+                                    background-size: contain;
+                                    background-repeat: no-repeat;
+                                }
+                            }
+                            .voitCarou{
+                                flex: 2;
+                                transform: translateY(-300px);
+                                z-index: 0;
+                                height: 200%;
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: contain;
+                            }
+                        }
+                    }
+                }
+                .carCarouBas {
+                    flex: 1;
+
+                    .infosCarouBas{
+                        width: 80%;
+                        height: 100%;
+                        margin: auto;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        gap: 15%;
+
+                        .contenuInfo {
+                            flex: 1;
+                            height: 100%;
+                            display: flex;
+                            background-color: rgb(66, 63, 63);
+                            border-radius: 10px;
+
+                            .logoContenu{
+                                flex: 1;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+
+                                svg{
+                                    width: 75px;
+                                    height: 75px;
+                                    fill: orange;
+                                }
+                            }
+                            .chiffreContenu{
+                                flex: 2;
+                                display: flex;
+                                flex-direction: column;
+                                color: white;
+                                justify-content: center;
+                                align-items: center;
+                                text-align: center;
+                                font-size: 30px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+    
+
+    }
+
+    .carousel-indicators {
+        button {
+            width: 70px;
+            height: 8px;
+        }
+    }
+
+}
+
+.annonceCat{
+    width: 80%;
+    color: white;
+    margin: auto;
+    margin-top: 70px !important;
+}
+
+.tableauMarque {
+    height: 75vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+    .contenuCateg {
+        width: 80%;
+        height: 80%;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        overflow: hidden;
+        --gap: 2em;
+        --line-offset: calc(var(--gap) / 2);
+        --line-thickness: 2px;
+        --line-color: grey;
+
+        a{
+            text-decoration: none;
+            position: relative;
+            .category{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+
+                .logoMarque{
+                    height: 80%;
+                    width: 80%;
+                    margin: auto;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    
+                    img{
+                        transition: all 1s;
+                        width: 90%;
+                        height: 90%;
+                        object-fit: contain;
+                        filter: grayscale(1);
+                    }
+                }
+            }
+
+            &:hover {
+                .logoMarque{
+                    img{
+                        transform: scale(1.2);
+                        filter: grayscale(0);
+                    }
+                }
+            }
+
+        }
+
+        a::before, 
+        a::after {
+            content: '';
+            position: absolute;
+            background-color: var(--line-color);
+            z-index: 1;
+        }
+
+        a::after {
+            inline-size: 100vw;
+            block-size: var(--line-thickness);
+            inset-inline-start: 0;
+            inset-block-start: calc(var(--line-offset) * -1);
+        }
+
+        a::before {
+            inline-size: var(--line-thickness);
+            block-size: 100vh;
+            inset-block-start: 0;
+            inset-inline-start: calc(var(--line-offset) * -1);
+        }
+    }
+
+
+}
+.blanc {
+    height: 50vh;
+}
+
+.accCars{
+    width: 80%;
+    height: 5vh;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    color: white;
+}
+.menuBrand{
+    width: 80%;
+    height: 10vh;
+    display: flex;
+    margin: auto;
+
+    a{
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid grey;
+        div{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img{
+                width: 70%;
+                height: 70%;
+                object-fit: contain;
+            }
+        }
+    
+        .active{
+            background-color: rgb(78, 78, 78);
+        }
+
+    }
+
+}
+
+.contenaireVoiture{
+    width: 80%;
+    min-height: 40vh;
+    margin: auto;
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 100px;
+    row-gap: 30px;
+
+    .voiture{
+        outline: 1px solid grey;
+        height: 600px;
+
+        .imgVoit{
+            width: 100%;
+            height: 40%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            img{
+                width: 80%;
+                height: 80%;
+                object-fit: contain;
+            }
+        }
+
+        .infoVoit{
+            width: 70%;
+            height: 60%;
+            margin: auto;
+
+            .nomVoit{
+                width: 100%;
+                padding: 10px;
+                color: white;
+                border-bottom: 1px solid grey;
+            }
+            .priceKM{
+                margin-top: 10px;
+                padding: 10px;
+                display: flex;
+                width: 100%;
+                justify-content: space-between;
+                color: white;
+            }
+            .descriptionVoit{
+                padding: 10px;
+            }
+            .btnVoit {
+                width: 80%;
+                margin: auto;
+
+                a{
+                    width: 100%;
+                    background-color: orange;
+                    color: black;
+                }
+            }
+        }
+
+        &:hover{
+            outline: 3px solid black;
+        }
+    }
 }
