--- a/templates/car/show.html.twig
+++ b/templates/car/show.html.twig
@@ -14,5 +14,40 @@
             <img src="{{car.coverImage}}" alt="">
 			<a href="#" class="btn btn-primary">Acheter</a>
 		</div>
+		<div class="container">
+		<div class="row">
+			<div class="col-md-8 mb-3">
+				<div class="bd-example">
+					<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+						<div class="carousel-indicators">
+							{% for image in car.images %}
+								<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="{{loop.index0}}" {% if loop.first %} class="active" aria-current="true" {% endif %} aria-label="Slide {{loop.index}}"></button>
+							{% endfor %}
+						</div>
+						<div class="carousel-inner">
+							{% for image in car.images %}
+								<div class="carousel-item {% if loop.first %}active{% endif %}">
+									<img src="{{image.url}}" class="d-block w-100" alt="image de {{car.brand}}">
+									<div class="carousel-caption d-none d-md-block">
+										<h5>{{car.brand}} {{car.model}}</h5>
+										<p>{{image.caption}}</p>
+									</div>
+								</div>
+							{% endfor %}
+
+						</div>
+						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Previous</span>
+						</button>
+						<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Next</span>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 {% endblock %}
