--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Modification du mot de passe{% endblock %}
 
 {% block body %}
-    <div class="container full">
+    <div class="container full formConnex">
         <h1>Modification du mot de passe</h1>
         {{form_start(myForm)}}
             {{form_widget(myForm)}}
-            <button type="submit" class="btn btn-warning">Confirmez la modification du mot de passe</button>
+            <button type="submit" class="btn btn-outline-warning">Confirmez la modification du mot de passe</button>
         {{form_end(myForm)}}    
     </div>
 {% endblock %}
