--- a/templates/account/registration.html.twig
+++ b/templates/account/registration.html.twig
@@ -4,11 +4,11 @@
 
 {% block body %}
     <div class="container full">
-        <h1>Inscription sur Immoloc</h1>
+        <h1>Inscription sur Mon Garage</h1>
         {{form_start(myForm)}}
-
+        
             {{form_widget(myForm)}}
-            <button type="submit" class="btn btn-success">Confirmez l'inscription</button>
+            <button type="submit" class="btn btn-outline-success">Confirmez l'inscription</button>
 
         {{form_end(myForm)}}
     </div>
