--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -11,6 +11,8 @@
 .navHead{
     width: 100%;
     height: 6vh;
+    border-bottom: 1px solid black;
+    margin-bottom: 20px;
 
     ul{
         display: flex;
@@ -84,7 +86,6 @@
                         position: absolute;
                         width: 100%;
                         height: 100%;
-                        padding: 100px;
 
                         .nomCarCarou {
                             height: 20%;
@@ -109,7 +110,7 @@
                             align-items: center;
                             p{
                                 width: 40%;
-                                font-size: 20px;
+                                font-size: 16px;
                             }
                         }
                         .imageCarCarou{
@@ -126,12 +127,12 @@
                                 a{
                                     width: 200px;
                                     height: 50px;
-                                    margin-bottom: 25px;
-                                    margin-top: 25px;
+                                    margin-bottom: 10px;
+                                    margin-top: 10px;
                                 }
                                 .miniLogoMarque{
-                                    width: 200px;
-                                    height: 200px;
+                                    width: 150px;
+                                    height: 150px;
                                     background-position: center center;
                                     background-size: contain;
                                     background-repeat: no-repeat;
@@ -188,7 +189,7 @@
                                 justify-content: center;
                                 align-items: center;
                                 text-align: center;
-                                font-size: 30px;
+                                font-size: 24px;
                             }
                         }
                     }
@@ -365,24 +366,24 @@
 
     .voiture{
         outline: 1px solid grey;
-        height: 600px;
+        height: 550px;
 
         .imgVoit{
             width: 100%;
-            height: 40%;
+            height: 30%;
             display: flex;
             justify-content: center;
             align-items: center;
 
             img{
-                width: 80%;
+                width: 470%;
                 height: 80%;
                 object-fit: contain;
             }
         }
 
         .infoVoit{
-            width: 70%;
+            width: 80%;
             height: 60%;
             margin: auto;
 
@@ -419,4 +420,275 @@
             outline: 3px solid black;
         }
     }
+}
+
+.infosUser{
+    width: 100%;
+    height: 20vh;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+    
+    .nomPhoto{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        .photoUser{
+            width: 200px;
+            height: 100%;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid grey;
+
+            .emplacement{
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                transition: filter 1s;
+                background-color: white;
+            }
+
+            
+
+            &:hover{
+                .emplacement{
+                    filter: grayscale(1);
+                    opacity: 0.2;
+                }
+
+                .btnPhotoUser{
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+    
+                    a{
+                        font-size: 12px;
+                        width: 70%;
+                        margin: auto;
+                        color: white;
+                    }
+                }
+            }
+        }
+        .nomPrenom{
+            width: calc(100% - 200px);
+            margin: auto;
+            height: 100%;
+            padding: 30px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: start;
+            color: white;
+
+            .btnNomPren{
+                display: flex;
+                justify-content: center;
+                gap: 30px;
+            }
+        }
+    }
+}
+
+.gridCarProfil {
+    width: 100%;
+    min-height: 30vh;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 50px;
+    row-gap: 20px;
+    margin-top: 20px;
+
+    .carProfil{
+        min-height: 30vh;
+        border: 1px solid grey;
+        display: flex;
+        flex-direction: column;
+
+        .imgCarProfil{
+            width: 100%;
+            height: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            img{
+                width: 80%;
+                height: 80%;
+                object-fit: contain;
+            }
+        }
+
+        .nomCarProfil{
+            width: 100%;
+            height: 15%;
+            text-align: center;
+            color: white;
+        }
+
+        .btnCarProfil{
+            width: 100%;
+            height: 35%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-direction: column;
+        }
+        
+    }
+}
+
+.infoVoitShow{
+    width: 100%;
+    min-height: 80vh;
+
+    .infoVoiture{
+        height: 10vh;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: white;
+        .vendeur{
+            width: 40%;
+            height: 100%;
+            display: flex;
+
+            .annVendeur{
+                display: flex;
+                flex: 3;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: end;
+                color: white;
+                font-size: 24px;
+            }
+
+            .imgVendeur{
+                flex: 1;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                }
+                .imgVendeurVid{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+    }
+    .voitureFond{
+        width: 100%;
+        height: 50vh;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        transform: translateY(-60px);
+
+    }
+    .descriptionVoitShow{
+        width: 80%;
+        margin: auto;
+        min-height: 5vh;
+        font-size: 18px;
+        color: grey;
+        text-align: center;
+    }
+    .composants{
+        width: 100%;
+        min-height: 40vh;
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        column-gap: 30px;
+        row-gap: 10px;
+
+        .contenuCompo{
+            height: 20vh;
+            outline: 1px solid grey;
+            display: flex;
+            flex-direction: column;
+
+            .fAwes{
+                flex: 2;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                svg {
+                    fill: orange;
+                    width: 50px;
+                    height: 50px;
+                }
+                img{
+                    width: 50px;
+                    height: 50px;
+                    background-color: orange;
+                    border-radius: 10px;
+                }
+            }
+            .infoContenu{
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding: 20px;
+                color: white;
+
+                h2{
+                    font-size: 40px;
+                }
+
+                span{
+                    font-size: 14px;
+                    color: grey;
+                }
+            }
+        }
+    }
+    .optionsVoit{
+        margin-top: 20px;
+
+        h3{
+            margin-bottom: 30px;
+        }
+    }
+    .carouShow{
+        margin-top: 20px;
+        .carousel-item{
+            
+            width: 100%;
+            height: 80%;
+
+            .carousel-caption{
+                background-color: rgba(0, 0, 0, 0.4);
+            }
+        }
+
+        .carousel-item.active{
+            width: 100%;
+            height: 80%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .imgCarouselShow{
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+}
+
+.formConnex{
+    min-height: 69vh;
 }
