--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Connexion au site{% endblock %}
 
 {% block body %}
-    <div class="container full">
+    <div class="container full formConnex">
         <div class="row">
-            <div class="col-md-6 offset-md-3 bg-light p-3">
+            <div class="col-md-6 offset-md-3 p-3">
                 <h1>Connexion</h1>
                 {# gestion des erreurs #}
                 {% if hasError %}
@@ -31,7 +31,7 @@
                         <input type="password" name="_password" id="password" class="form-control" placeholder="Votre mot de passe..." required>
                     </div>
                     <div class="form-group my-2">
-                        <button type="submit" class="btn btn-success my-3">Connexion</button>
+                        <button type="submit" class="btn btn-outline-success my-3">Connexion</button>
                     </div>
                 </form>
 
