--- a/templates/car/show.html.twig
+++ b/templates/car/show.html.twig
@@ -5,49 +5,123 @@
 {% endblock %}
 
 {% block body %}
-		<div class="container">
-			<h1>{{car.brand}} {{car.model}}</h1>
-			<p>{{car.description}}</p>
-			<p class="h2">
-                {{car.price}}€</strong>
-			</p>
-            <img src="{{car.coverImage}}" alt="">
-			<a href="#" class="btn btn-primary">Acheter</a>
-		</div>
-		<div class="container">
-		<div class="row">
-			<div class="col-md-8 mb-3">
-				<div class="bd-example">
-					<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-						<div class="carousel-indicators">
-							{% for image in car.images %}
-								<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="{{loop.index0}}" {% if loop.first %} class="active" aria-current="true" {% endif %} aria-label="Slide {{loop.index}}"></button>
-							{% endfor %}
-						</div>
-						<div class="carousel-inner">
-							{% for image in car.images %}
-								<div class="carousel-item {% if loop.first %}active{% endif %}">
-									<img src="{{image.url}}" class="d-block w-100" alt="image de {{car.brand}}">
-									<div class="carousel-caption d-none d-md-block">
-										<h5>{{car.brand}} {{car.model}}</h5>
-										<p>{{image.caption}}</p>
-									</div>
+	<div class="container">
+		<div class="infoVoitShow">
+			<div class="infoVoiture">
+				<div class="nom">
+					<h1>{{car.brand}} {{car.model}} {{car.releaseYear}}</h1>
+				</div>
+				<div class="vendeur">
+					<div class="annVendeur">
+						<span>Vendu par :</span>
+						<span>{{user.lastName|upper}} {{user.firstName}}</span>
+					</div>
+					<div class="imgVendeur">
+					{% if user.picture %}
+						<img src="/uploads/{{user.picture}}" alt="">
+					{% else %}
+						<div class="imgVendeurVid"></div>
+					{% endif %}
+					</div>
+				</div>
+			</div>
+			<div class="voitureFond" style="background-image:url({{car.coverImage}})"></div>
+			<div class="descriptionVoitShow">
+				<p>{{car.description}}</p>
+			</div>
+			<div class="composants">
+				<div class="contenuCompo">
+					<div class="fAwes"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512"><path d="M171.3 96H224v96H111.3l30.4-75.9C146.5 104 158.2 96 171.3 96zM272 192V96h81.2c9.7 0 18.9 4.4 25 12l67.2 84H272zm256.2 1L428.2 68c-18.2-22.8-45.8-36-75-36H171.3c-39.3 0-74.6 23.9-89.1 60.3L40.6 196.4C16.8 205.8 0 228.9 0 256V368c0 17.7 14.3 32 32 32H65.3c7.6 45.4 47.1 80 94.7 80s87.1-34.6 94.7-80H385.3c7.6 45.4 47.1 80 94.7 80s87.1-34.6 94.7-80H608c17.7 0 32-14.3 32-32V320c0-65.2-48.8-119-111.8-127zM434.7 368a48 48 0 1 1 90.5 32 48 48 0 1 1 -90.5-32zM160 336a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"/></svg></div>
+					<div class="infoContenu">
+						<h2>{{car.kilometers}} kms</h2>
+						<span>Kilomètres parcouru</span>
+					</div>
+				</div>
+				<div class="contenuCompo">
+					<div class="fAwes"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M320 96H192L144.6 24.9C137.5 14.2 145.1 0 157.9 0H354.1c12.8 0 20.4 14.2 13.3 24.9L320 96zM192 128H320c3.8 2.5 8.1 5.3 13 8.4C389.7 172.7 512 250.9 512 416c0 53-43 96-96 96H96c-53 0-96-43-96-96C0 250.9 122.3 172.7 179 136.4l0 0 0 0c4.8-3.1 9.2-5.9 13-8.4zm84 88c0-11-9-20-20-20s-20 9-20 20v14c-7.6 1.7-15.2 4.4-22.2 8.5c-13.9 8.3-25.9 22.8-25.8 43.9c.1 20.3 12 33.1 24.7 40.7c11 6.6 24.7 10.8 35.6 14l1.7 .5c12.6 3.8 21.8 6.8 28 10.7c5.1 3.2 5.8 5.4 5.9 8.2c.1 5-1.8 8-5.9 10.5c-5 3.1-12.9 5-21.4 4.7c-11.1-.4-21.5-3.9-35.1-8.5c-2.3-.8-4.7-1.6-7.2-2.4c-10.5-3.5-21.8 2.2-25.3 12.6s2.2 21.8 12.6 25.3c1.9 .6 4 1.3 6.1 2.1l0 0 0 0c8.3 2.9 17.9 6.2 28.2 8.4V424c0 11 9 20 20 20s20-9 20-20V410.2c8-1.7 16-4.5 23.2-9c14.3-8.9 25.1-24.1 24.8-45c-.3-20.3-11.7-33.4-24.6-41.6c-11.5-7.2-25.9-11.6-37.1-15l0 0-.7-.2c-12.8-3.9-21.9-6.7-28.3-10.5c-5.2-3.1-5.3-4.9-5.3-6.7c0-3.7 1.4-6.5 6.2-9.3c5.4-3.2 13.6-5.1 21.5-5c9.6 .1 20.2 2.2 31.2 5.2c10.7 2.8 21.6-3.5 24.5-14.2s-3.5-21.6-14.2-24.5c-6.5-1.7-13.7-3.4-21.1-4.7V216z"/></svg></div>
+					<div class="infoContenu">
+						<h2>{{car.price}} €</h2>
+						<span>Prix de la voiture</span>
+					</div>
+				</div>
+				<div class="contenuCompo">
+					<div class="fAwes"><svg xmlns="http://www.w3.org/2000/svg" height="200px" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg></div>
+					<div class="infoContenu">
+						<h2>{{car.owners}}</h2>
+						{% if car.owners > 1 %}
+							<span>Ancien Propriétaires</span>
+						{% else %}
+							<span>Ancien Propriétaire</span>
+						{% endif %}
+					</div>
+				</div>
+				<div class="contenuCompo">
+					<div class="fAwes"><img src="https://cdn-icons-png.flaticon.com/512/3627/3627884.png" alt="Icone de cylindree"></div>
+					<div class="infoContenu">
+						<h2>{{car.engineCylinder}}</h2>
+						<span>Cylindrée de la voiture</span>
+					</div>
+				</div>
+				<div class="contenuCompo">
+					<div class="fAwes"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM288 96a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zM256 416c35.3 0 64-28.7 64-64c0-17.4-6.9-33.1-18.1-44.6L366 161.7c5.3-12.1-.2-26.3-12.3-31.6s-26.3 .2-31.6 12.3L257.9 288c-.6 0-1.3 0-1.9 0c-35.3 0-64 28.7-64 64s28.7 64 64 64zM176 144a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zM96 288a32 32 0 1 0 0-64 32 32 0 1 0 0 64zm352-32a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"/></svg></div>
+					<div class="infoContenu">
+						<h2>{{car.power}}</h2>
+						<span>Puissance moteur en chevaux</span>
+					</div>
+				</div>
+				<div class="contenuCompo">
+					<div class="fAwes"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M32 64C32 28.7 60.7 0 96 0H256c35.3 0 64 28.7 64 64V256h8c48.6 0 88 39.4 88 88v32c0 13.3 10.7 24 24 24s24-10.7 24-24V222c-27.6-7.1-48-32.2-48-62V96L384 64c-8.8-8.8-8.8-23.2 0-32s23.2-8.8 32 0l77.3 77.3c12 12 18.7 28.3 18.7 45.3V168v24 32V376c0 39.8-32.2 72-72 72s-72-32.2-72-72V344c0-22.1-17.9-40-40-40h-8V448c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32V64zM96 80v96c0 8.8 7.2 16 16 16H240c8.8 0 16-7.2 16-16V80c0-8.8-7.2-16-16-16H112c-8.8 0-16 7.2-16 16z"/></svg></div>
+					<div class="infoContenu">
+						<h2>{{car.fuel}}</h2>
+						<span>Type de carburant</span>
+					</div>
+				</div>
+				<div class="contenuCompo">
+					<div class="fAwes"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z"/></svg></div>
+					<div class="infoContenu">
+						<h2>{{car.releaseYear}}</h2>
+						<span>Année de mise en circulation</span>
+					</div>
+				</div>
+				<div class="contenuCompo">
+					<div class="fAwes"><img src="https://cdn-icons-png.flaticon.com/512/2061/2061870.png" alt="Image de transmission"></div>
+					<div class="infoContenu">
+						<h2>{{car.transmission }}</h2>
+						<span>Type de transmission</span>
+					</div>
+				</div>
+			</div>
+			<div class="optionsVoit">
+				<h3>Liste des options</h3>
+				{{car.options|striptags}}
+			</div>
+			<div class="container carouShow">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="bd-example">
+							<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+								<div class="carousel-indicators">
+									{% for image in car.images %}
+										<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="{{loop.index0}}" {% if loop.first %} class="active" aria-current="true" {% endif %} aria-label="Slide {{loop.index}}"></button>
+									{% endfor %}
 								</div>
-							{% endfor %}
+								<div class="carousel-inner">
+									{% for image in car.images %}
+										<div class="carousel-item {% if loop.first %}active{% endif %}">
+											<img src="{{image.url}}" class="imgCarouselShow" alt="image de {{car.brand}}">
+											<div class="carousel-caption d-none d-md-block">
+												<h5>{{car.brand}}</h5>
+												<p>{{image.caption}}</p>
+											</div>
+										</div>
+									{% endfor %}
 
+								</div>
+							</div>
 						</div>
-						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-							<span class="visually-hidden">Previous</span>
-						</button>
-						<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-							<span class="carousel-control-next-icon" aria-hidden="true"></span>
-							<span class="visually-hidden">Next</span>
-						</button>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 {% endblock %}
