--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -16,7 +16,7 @@
 
     ul{
         display: flex;
-        width: 40%;
+        width: 70%;
         height: 6vh;
         margin: auto;
         justify-content: center;
@@ -43,7 +43,77 @@
             }
         }
     }
+
+    @media all and (max-width: 768px) {
+        display: none;
+    }
 }
+
+.btnBurger, .navBurger{
+    display: none !important;
+
+    @media all and (max-width: 768px) {
+        display: block !important;
+    }
+
+}
+
+.navBurger{
+    @media all and (max-width: 768px) {
+        display: flex !important;
+        justify-content: space-around !important;
+        align-items: center !important;
+        height: 6vh;
+        
+        ul{
+            width: 50%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            list-style: none;
+            margin: 0 !important;
+            li{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                a{
+                    text-decoration: none;
+                    color: orange;
+                    h2{
+                        margin: 0;
+                    }
+                }
+            }
+        }
+    }
+
+}
+.menuBurger{
+    width: 80%;
+    margin: auto;
+
+    .intMenuBurger{
+        ul{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            list-style: none;
+            gap: 10px;
+            li{
+                flex: 1;
+                a{
+                    font-size: 16px;
+                    color: orange;
+                    text-decoration: none;
+                }
+            }
+        }
+    }
+}
+
 
 .carousel {
     height: 90vh;
@@ -81,6 +151,9 @@
                         align-items: right;
                         justify-content: end;
                         opacity: 0.3;
+                        @media all and (max-width: 1500px) {
+                            font-size: 200px;
+                        }
                     }
                     .contenuCarCarouHaut{
                         position: absolute;
@@ -159,6 +232,7 @@
                         margin: auto;
                         display: flex;
                         justify-content: space-between;
+                        flex-wrap: wrap;
                         align-items: center;
                         gap: 15%;
 
@@ -305,17 +379,20 @@
     margin: auto;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 15px;
     color: white;
 }
 .menuBrand{
     width: 80%;
-    height: 10vh;
+    min-height: 10vh;
     display: flex;
+    flex-wrap: wrap;
     margin: auto;
+    justify-content: center;
 
     a{
-        flex: 1;
+        width: 150px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -363,10 +440,22 @@
     grid-template-columns: repeat(3,1fr);
     gap: 100px;
     row-gap: 30px;
+    @media all and (max-width:1300px) {
+        grid-template-columns: repeat(2,1fr);
+    }
+    @media all and (max-width:750px) {
+        grid-template-columns: repeat(1,1fr);
+    }
 
     .voiture{
         outline: 1px solid grey;
         height: 550px;
+        @media all and (max-width:1725px) and (min-width:1300px) {
+            height: 725px;
+        }
+        @media all and (max-width:1130px) and (min-width:750px) {
+            height: 725px;
+        }
 
         .imgVoit{
             width: 100%;
@@ -376,7 +465,7 @@
             align-items: center;
 
             img{
-                width: 470%;
+                width: 70%;
                 height: 80%;
                 object-fit: contain;
             }
