--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -154,6 +154,9 @@
                         @media all and (max-width: 1500px) {
                             font-size: 200px;
                         }
+                        @media all and (max-width: 1000px) {
+                            opacity: 0;
+                        }
                     }
                     .contenuCarCarouHaut{
                         position: absolute;
@@ -167,11 +170,17 @@
                             display: flex;
                             justify-content: start;
                             align-items: center;
-                            
+                            @media all and (max-width: 1000px) {
+                                width: 100%;
+                                height: 10%;
+                                flex-direction: column;
+                            }
                             h2{
-                                
                                 font-size: 70px;
                                 color: white;
+                                @media all and (max-width: 1000px) {
+                                    font-size: 30px;
+                                }
                             }
                         }
                         .descriptionCarCarou{
@@ -184,6 +193,13 @@
                             p{
                                 width: 40%;
                                 font-size: 16px;
+                                @media all and (max-width: 1000px) {
+                                    width: 70%;
+                                }
+                            }
+                            @media all and (max-width: 1000px) {
+                                width: 100%;
+                                flex-direction: column;
                             }
                         }
                         .imageCarCarou{
@@ -191,7 +207,10 @@
                             height: 70%;
                             margin: auto;
                             display: flex;
-
+                            @media all and (max-width: 1000px) {
+                                flex-direction: column;
+                                align-items: center;
+                            }
                             .btnsCarou{
                                 flex: 1;
                                 display: flex;
@@ -209,6 +228,11 @@
                                     background-position: center center;
                                     background-size: contain;
                                     background-repeat: no-repeat;
+                                    @media all and (max-width: 1000px) {
+                                        width: 75px;
+                                        height: 75px;
+                                        margin: auto;
+                                    }
                                 }
                             }
                             .voitCarou{
@@ -219,12 +243,20 @@
                                 background-position: center center;
                                 background-repeat: no-repeat;
                                 background-size: contain;
+                                @media all and (max-width: 1000px) {
+                                   z-index: 4;
+                                   transform: translateY(-75px);
+                                   width: 300px;
+                                }
                             }
                         }
                     }
                 }
                 .carCarouBas {
                     flex: 1;
+                    @media all and (max-width: 1000px) {
+                        display: none;
+                    }
 
                     .infosCarouBas{
                         width: 80%;
@@ -235,6 +267,9 @@
                         flex-wrap: wrap;
                         align-items: center;
                         gap: 15%;
+                        @media all and (max-width: 1400px) {
+                            width: 100%;
+                        }
 
                         .contenuInfo {
                             flex: 1;
@@ -304,6 +339,9 @@
         min-height: 80%;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
+        @media all and (max-width: 1000px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
         overflow: hidden;
         --gap: 2em;
         --line-offset: calc(var(--gap) / 2);
@@ -333,6 +371,10 @@
                         height: 90%;
                         object-fit: contain;
                         filter: grayscale(1);
+                        @media all and (max-width: 1000px) {
+                            width: 70%;
+                            height: 70%;
+                        }
                     }
                 }
             }
@@ -360,7 +402,7 @@
             inline-size: 100vw;
             block-size: var(--line-thickness);
             inset-inline-start: 0;
-            inset-block-start: calc(var(--line-offset) * -1);
+            //inset-block-start: calc(var(--line-offset) * -1);
         }
 
         a::before {
@@ -515,13 +557,19 @@
     width: 100%;
     height: 20vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     margin-bottom: 50px;
-    
+    @media all and (max-width:1000px) {
+        flex-direction: row;
+        margin-top: 20px;
+    }
     .nomPhoto{
         width: 100%;
         height: 100%;
         display: flex;
+        @media all and (max-width:1000px) {
+            flex-direction: row;
+        }
         .photoUser{
             width: 200px;
             height: 100%;
@@ -541,7 +589,7 @@
 
             
 
-            &:hover{
+            &:hover, &:active{
                 .emplacement{
                     filter: grayscale(1);
                     opacity: 0.2;
@@ -576,9 +624,19 @@
             color: white;
 
             .btnNomPren{
+                flex: 1;
                 display: flex;
                 justify-content: center;
+                align-items: center;
                 gap: 30px;
+                @media all and (max-width:1000px) {
+                    height: 75%;
+                    gap: 2px;
+                    a{
+                        font-size: 11px;
+
+                    }
+                }
             }
         }
     }
@@ -589,6 +647,12 @@
     min-height: 30vh;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    @media all and (max-width:1200px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @media all and (max-width:800px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
     column-gap: 50px;
     row-gap: 20px;
     margin-top: 20px;
@@ -598,6 +662,9 @@
         border: 1px solid grey;
         display: flex;
         flex-direction: column;
+        @media all and (max-width:1000px) {
+            
+        }
 
         .imgCarProfil{
             width: 100%;
@@ -605,6 +672,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            @media all and (max-width:1000px) {
+                height: 40%;
+            }
 
             img{
                 width: 80%;
@@ -624,9 +694,16 @@
             width: 100%;
             height: 35%;
             display: flex;
+            flex-direction: row;
             justify-content: space-around;
             align-items: center;
-            flex-direction: column;
+            a{
+                font-size: 12px;
+            }
+            @media all and (max-width:1000px) {
+                flex-direction: column;
+                gap: 15px;
+            }
         }
         
     }
@@ -640,6 +717,11 @@
         height: 10vh;
         width: 100%;
         display: flex;
+        @media all and (max-width:800px) {
+            height: 10vh;
+            flex-direction: column;
+            justify-content: center;
+        }
         justify-content: space-between;
         align-items: center;
         color: white;
@@ -647,7 +729,14 @@
             width: 40%;
             height: 100%;
             display: flex;
-
+            @media all and (max-width:800px) {
+                width: 100%;
+                margin: auto;
+                flex-direction: row;
+                height: 5vh;
+                align-items: center;
+                justify-content: center;
+            }
             .annVendeur{
                 display: flex;
                 flex: 3;
@@ -656,6 +745,14 @@
                 align-items: end;
                 color: white;
                 font-size: 24px;
+                @media all and (max-width:800px) {
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 15px;
+                    width: 100%;
+                    margin: auto;
+                }
             }
 
             .imgVendeur{
@@ -683,6 +780,9 @@
         background-repeat: no-repeat;
         background-size: contain;
         transform: translateY(-60px);
+        @media all and (max-width:800px) {
+            transform: translateY(0px);
+        }
 
     }
     .descriptionVoitShow{
@@ -698,6 +798,16 @@
         min-height: 40vh;
         display: grid;
         grid-template-columns: repeat(4,1fr);
+        @media all and (max-width:1200px) {
+            grid-template-columns: repeat(3,1fr);
+        }
+        @media all and (max-width:1000px) {
+            grid-template-columns: repeat(2,1fr);
+        }
+        @media all and (max-width:600px) {
+            grid-template-columns: repeat(1,1fr);
+        }
+        
         column-gap: 30px;
         row-gap: 10px;
 
@@ -745,18 +855,33 @@
     }
     .optionsVoit{
         margin-top: 20px;
-
+        @media all and (max-width:1000px) {
+            text-align: center;
+        }
         h3{
             margin-bottom: 30px;
         }
     }
     .carouShow{
         margin-top: 20px;
+        @media all and (max-width:1000px) {
+            height: 40vh;
+        }
+        .slide{
+            @media all and (max-width:1000px) {
+                height: 40vh;
+            }
+
+        }
+        .carousel-inner{
+            @media all and (max-width:1000px) {
+                height: 40vh;
+            }
+        }
         .carousel-item{
             
             width: 100%;
             height: 80%;
-
             .carousel-caption{
                 background-color: rgba(0, 0, 0, 0.4);
             }
@@ -773,6 +898,7 @@
         .imgCarouselShow{
             width: 100%;
             height: 100%;
+            
         }
     }
 
@@ -780,4 +906,7 @@
 
 .formConnex{
     min-height: 69vh;
+    @media all and (max-width:1000px) {
+        min-height: 80vh;
+    }
 }
