Changement responsive plus bouton retour sur les pages modify

--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -8,6 +8,7 @@
         {{form_start(myForm)}}
             {{form_widget(myForm)}}
             <button type="submit" class="btn btn-outline-warning">Confirmez la modification du mot de passe</button>
+            <a class="btn btn-primary" href="{{path('account')}}">Retour</a>
         {{form_end(myForm)}}    
     </div>
 {% endblock %}
