--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -154,7 +154,7 @@
                         @media all and (max-width: 1500px) {
                             font-size: 200px;
                         }
-                        @media all and (max-width: 1000px) {
+                        @media all and (max-width: 1300px) {
                             opacity: 0;
                         }
                     }
@@ -167,19 +167,17 @@
                             height: 20%;
                             width: 80%;
                             margin: auto;
-                            display: flex;
-                            justify-content: start;
-                            align-items: center;
-                            @media all and (max-width: 1000px) {
+                            @media all and (max-width: 1300px) {
                                 width: 100%;
-                                height: 10%;
+                                height: 5vh;
                                 flex-direction: column;
                             }
                             h2{
                                 font-size: 70px;
                                 color: white;
-                                @media all and (max-width: 1000px) {
+                                @media all and (max-width: 1300px) {
                                     font-size: 30px;
+                                    text-align: center;
                                 }
                             }
                         }
@@ -193,11 +191,13 @@
                             p{
                                 width: 40%;
                                 font-size: 16px;
-                                @media all and (max-width: 1000px) {
-                                    width: 70%;
+                                @media all and (max-width: 1300px) {
+                                    width: 95%;
+                                    text-align: center;
+                                    margin-top: 40px;
                                 }
                             }
-                            @media all and (max-width: 1000px) {
+                            @media all and (max-width: 1300px) {
                                 width: 100%;
                                 flex-direction: column;
                             }
@@ -207,9 +207,10 @@
                             height: 70%;
                             margin: auto;
                             display: flex;
-                            @media all and (max-width: 1000px) {
+                            @media all and (max-width: 1300px) {
                                 flex-direction: column;
                                 align-items: center;
+                                height: 60%;
                             }
                             .btnsCarou{
                                 flex: 1;
@@ -221,6 +222,15 @@
                                     height: 50px;
                                     margin-bottom: 10px;
                                     margin-top: 10px;
+                                    @media all and (max-width: 1300px) {
+                                        width: 200px;
+                                        height: 30px;
+                                        margin-bottom: 5px;
+                                        margin-top: 5px;
+                                        display: flex;
+                                        justify-content: center;
+                                        align-items: center;
+                                    }
                                 }
                                 .miniLogoMarque{
                                     width: 150px;
@@ -228,9 +238,9 @@
                                     background-position: center center;
                                     background-size: contain;
                                     background-repeat: no-repeat;
-                                    @media all and (max-width: 1000px) {
-                                        width: 75px;
-                                        height: 75px;
+                                    @media all and (max-width: 1300px) {
+                                        width: 50px;
+                                        height: 50px;
                                         margin: auto;
                                     }
                                 }
@@ -243,10 +253,11 @@
                                 background-position: center center;
                                 background-repeat: no-repeat;
                                 background-size: contain;
-                                @media all and (max-width: 1000px) {
+                                @media all and (max-width: 1300px) {
                                    z-index: 4;
-                                   transform: translateY(-75px);
-                                   width: 300px;
+                                   transform: translateY(-45px);
+                                   width: 200px;
+                                   height: 100%;
                                 }
                             }
                         }
@@ -254,7 +265,7 @@
                 }
                 .carCarouBas {
                     flex: 1;
-                    @media all and (max-width: 1000px) {
+                    @media all and (max-width: 1300px) {
                         display: none;
                     }
 
@@ -417,13 +428,20 @@
 }
 .accCars{
     width: 80%;
-    height: 5vh;
+    height: 8vh;
     margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 15px;
     color: white;
+    h1{
+        margin-top: 15px;
+        margin-bottom: 15px !important;
+        @media all and (max-width:750px) {
+            font-size: 20px;
+        }
+    }
 }
 .menuBrand{
     width: 80%;
@@ -497,6 +515,9 @@
         }
         @media all and (max-width:1130px) and (min-width:750px) {
             height: 725px;
+        }
+        @media all and (max-width:550px)  {
+            height: 775px;
         }
 
         .imgVoit{
@@ -578,6 +599,10 @@
             justify-content: center;
             align-items: center;
             border: 1px solid grey;
+            @media all and (max-width:1000px) {
+                width: 150px;
+                height: 100%;
+            }
 
             .emplacement{
                 position: absolute;
@@ -614,6 +639,9 @@
         }
         .nomPrenom{
             width: calc(100% - 200px);
+            @media all and (max-width:1000px) {
+                width: calc(100% - 150px);
+            }
             margin: auto;
             height: 100%;
             padding: 30px;
@@ -631,10 +659,14 @@
                 gap: 30px;
                 @media all and (max-width:1000px) {
                     height: 75%;
+                    width: 100%;
                     gap: 2px;
                     a{
-                        font-size: 11px;
-
+                        font-size: 8px;
+                        height: 100%;
+                        display: flex;
+                        justify-content: center;
+                        align-self: center;
                     }
                 }
             }
@@ -752,6 +784,8 @@
                     gap: 15px;
                     width: 100%;
                     margin: auto;
+                    font-size: 14px;
+                    flex: 5;
                 }
             }
 
@@ -765,10 +799,8 @@
                     width: 100%;
                     height: 100%;
                     object-fit: contain;
-                }
-                .imgVendeurVid{
-                    width: 100%;
-                    height: 100%;
+                    
+
                 }
             }
         }
@@ -816,6 +848,7 @@
             outline: 1px solid grey;
             display: flex;
             flex-direction: column;
+            padding: 10px;
 
             .fAwes{
                 flex: 2;
@@ -826,12 +859,20 @@
                     fill: orange;
                     width: 50px;
                     height: 50px;
+                    @media all and (max-width:500px) {
+                        width: 40px;
+                        height: 40px;
+                    }
                 }
                 img{
                     width: 50px;
                     height: 50px;
                     background-color: orange;
                     border-radius: 10px;
+                    @media all and (max-width:500px) {
+                        width: 40px;
+                        height: 40px;
+                    }
                 }
             }
             .infoContenu{
@@ -844,11 +885,17 @@
 
                 h2{
                     font-size: 40px;
+                    @media all and (max-width:500px) {
+                        font-size: 30px;
+                    }
                 }
 
                 span{
                     font-size: 14px;
                     color: grey;
+                    @media all and (max-width:500px) {
+                        font-size: 12px;
+                    }
                 }
             }
         }
