--- a/templates/account/imgModify.html.twig
+++ b/templates/account/imgModify.html.twig
@@ -12,7 +12,8 @@
         {{form_start(myForm)}}
 
             {{form_widget(myForm)}}
-            <button type="submit" class="btn btn-outline-warning">Confirmez la modification de l'avatar</button>
+            <button type="submit" class="btn btn-outline-warning">Confirmez la modification de l'avatar</button> 
+            <a class="btn btn-primary" href="{{path('account')}}">Retour</a>
 
         {{form_end(myForm)}}
     </div>
