Rajout de commentaires oubliés

--- a/templates/car/index.html.twig
+++ b/templates/car/index.html.twig
@@ -22,7 +22,7 @@
             {% else %}
                 <a href="{{url}}">
                     <div>
-                        <img src="{{cat.urlBrand}}" alt="">
+                        <img src="{{cat.urlBrand}}" alt="Image de marque">
                     </div>
                 </a>
             {% endif %}
@@ -41,7 +41,7 @@
             <div class="voiture">
             {% endif %}
                 <div class="imgVoit">
-                    <img src="{{car.coverImage}}" alt="Image de ">
+                    <img src="{{car.coverImage}}" alt="Image de voiture">
                 </div>
                 <div class="infoVoit">
                     <h3 class="nomVoit">{{car.brand}} {{car.model}} {{car.releaseYear}}</h3>
